# receipt-processor

./: README.md  main.py  pyproject.toml
receipt_processor/: __init__.py
receipt_processor/models/: receipt.py
receipt_processor/nlp/: spacy_model.py
receipt_processor/routes/: receipt.py  utils.py
